# GlobalMind

./: HR_Visual.py  hr_ana_act.csv  pyproject.toml
