[project]
name = "globalmind"
version = "0.1.0"
description = ""
authors = [
    {name = "Miguel de los Santos",email = "mdlsg@outlook.es"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "streamlit (>=1.45.1,<2.0.0)",
    "numpy (>=2.2.6,<3.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "plotly (>=6.1.1,<7.0.0)",
    "torch (>=2.7.0,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
